--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav>
     <header> 
        <img src="">
        <ul>
             <a href="" class="header-buttom">
-                <li class="">INICIO</li>
+                <li class="change">INICIO</li>
             </a>
             <a href="" class="header-buttom">
                 <li>CONTATO</li>
@@ -22,32 +23,41 @@
             </a>
         </ul>
         </header>
+    </nav>
         <section>
  <!-- carrossel -->
+ AGENDE SUA CONSULTA
         </section>
-        <div>
-TRATAMENTOS 
->EXEMPLO
->EXEMPLO
->EXEMPLO
-        </div>
-        <div>
-EQUIPAMENTOS
->EXEMPLO
->EXEMPLO
->EXEMPLO
-        </div>
-        <div>
-REDES SOCIAIS
-<a href="">
-        <img src="">
-        </a>
-        <a href="">
-                <img src="">
-                </a>
-        <a href="">
-            <img src="">
-         </a>
-        </div>
+            <div class="bloco">
+                    <div class="blocop" >
+            TRATAMENTOS 
+            <ul>
+                >EXEMPLO<br>
+                >EXEMPLO<br>
+                >EXEMPLO<br>
+            </ul>
+                    </div>
+                    <div class="blocop">
+            EQUIPAMENTOS
+            <ul>
+            >EXEMPLO<br>
+            >EXEMPLO<br>
+            >EXEMPLO<br>
+            </ul>
+                    </div>
+                    <div class="blocop">
+            REDES SOCIAIS
+            <a href="">
+                    <img src="">
+                    </a>
+                    <a href="">
+                            <img src="">
+                            </a>
+                    <a href="">
+                        <img src="">
+                     </a>
+                    </div>
+            </div>
+            
 </body>
 </html>
